fix:../scss/components/slider rename as ../scss/components/carousel, routes change; bag with horizontal scroll durring carousel;  min-width in .card img set, .offers__cards overflow set

--- a/src/styles/scss/components/carousel/carousel.scss
+++ b/src/styles/scss/components/carousel/carousel.scss
@@ -1,6 +1,7 @@
 .carousel {
     height: 695px;
     min-height: 695px;
+    overflow: hidden;
 
     .carousel-inner {
         overflow: unset;
